@@ -2,6 +2,16 @@
 
 	Small fixes.
 
+	* scribo/binarization/internal/global_max_stddev_functor.hh:
+	Remove reference to mln namespace.
+
+	* headers.mk,
+	* scribo/tests/unit_test/unit-tests.mk: Regen.
+
+2013-03-22  Guillaume Lazzara  <z@lrde.epita.fr>
+
+	Small fixes.
+
 	* scribo/binarization/all.hh: Add missing includes.
 
 	* scribo/binarization/internal/niblack_threshold_functor.hh,
